--- a/MediaBackupManager/View/TestPage.xaml
+++ b/MediaBackupManager/View/TestPage.xaml
@@ -9,27 +9,16 @@
         mc:Ignorable="d"
         Title="TestPage" Height="300" SizeToContent="WidthAndHeight" Width="300">
     <DockPanel x:Name="MainDock" LastChildFill="True" Margin="10">
-        <!--<TreeView x:Name="treeDirectory4" DockPanel.Dock="Left" Width="350" ItemsSource="{Binding Path=Index.BackupSets}">
-            <TreeView.Resources>
-                <HierarchicalDataTemplate DataType="{x:Type viewmodel:BackupSetViewModel}" ItemsSource="{Binding Path=RootDirectoryObject.SubDirectories}">
-                    <TreeViewItem Header="{Binding Path=Guid}"/>
-                </HierarchicalDataTemplate>
-                <DataTemplate DataType="{x:Type model:FileDirectory}">
-                    <TreeViewItem Header="{Binding DirectoryName}" ItemsSource="{Binding Path=SubDirectories}"/>
-                </DataTemplate>
-            </TreeView.Resources>
-        </TreeView>-->
         <TreeView x:Name="treeDirectory3" DockPanel.Dock="Left" Width="350" ItemsSource="{Binding Path=Index.BackupSets}">
             <TreeView.Resources>
-                <HierarchicalDataTemplate DataType="{x:Type viewmodel:BackupSetViewModel}" ItemsSource="{Binding Path=RootDirectoryObject.SubDirectories}">
-                    <TreeViewItem Header="{Binding Path=RootDirectoryObject.FullName}"/>
+                <HierarchicalDataTemplate DataType="{x:Type viewmodel:BackupSetViewModel}" ItemsSource="{Binding Path=RootDirectory.SubDirectories}">
+                    <TreeViewItem Header="{Binding Path=RootDirectory.FullName}"/>
                 </HierarchicalDataTemplate>
                 <HierarchicalDataTemplate DataType="{x:Type model:FileDirectory}" ItemsSource="{Binding Path=SubDirectories}">
                     <TreeViewItem Header="{Binding Path=Name}"/>
                 </HierarchicalDataTemplate>
             </TreeView.Resources>
         </TreeView>
-
         <StackPanel Orientation="Horizontal" DockPanel.Dock="Bottom">
             <Button x:Name="btnClearData" Content="Clear" Command="{Binding ClearData}"></Button>
             <Button x:Name="btnLoadData" Content="LoadDB" Command="{Binding LoadData}"></Button>
