--- a/MediaBackupManager/View/MainWindow.xaml
+++ b/MediaBackupManager/View/MainWindow.xaml
@@ -4,9 +4,17 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MediaBackupManager.View"
+        xmlns:viewmodel="clr-namespace:MediaBackupManager.ViewModel"
         mc:Ignorable="d"
-        Title="MainWindow" Height="300" Width="300" Closed="Window_Closed">
-    <Grid>
-        
-    </Grid>
+        Title="MainWindow" Height="300" Width="300" SizeToContent="WidthAndHeight" Closed="Window_Closed">
+    
+    <Window.Resources>
+        <DataTemplate DataType="{x:Type viewmodel:DirectoryBrowserViewModel}">
+            <local:DirectoryBrowserView />
+        </DataTemplate>
+    </Window.Resources>
+
+    <DockPanel LastChildFill="True">
+        <ContentControl Content="{Binding Path=CurrentAppViewModel}" DockPanel.Dock="Bottom"/>
+    </DockPanel>
 </Window>
