--- a/MediaBackupManager/View/CommandBarView.xaml
+++ b/MediaBackupManager/View/CommandBarView.xaml
@@ -7,7 +7,7 @@
              xmlns:model="clr-namespace:MediaBackupManager.Model"
              xmlns:viewmodel="clr-namespace:MediaBackupManager.ViewModel"
              mc:Ignorable="d" 
-             d:DesignHeight="50" d:DesignWidth="300">
+             d:DesignHeight="50" d:DesignWidth="300" Unloaded="UserControl_Unloaded">
     
     <StackPanel Orientation="Horizontal" Height="30">
         <Button x:Name="btnClearData" Content="Clear" Command="{Binding ClearData}"></Button>
