implemented directory navigation

--- a/MediaBackupManager/View/DirectoryBrowserView.xaml
+++ b/MediaBackupManager/View/DirectoryBrowserView.xaml
@@ -25,7 +25,9 @@
             </TreeView.Resources>
         </TreeView>
         <DataGrid x:Name="gridFiles" DockPanel.Dock="Right" 
-                  ItemsSource="{Binding Path=Index.BackupSets}"
-                  SelectedItem="{Binding Path=SelectedGridItem}"></DataGrid>
+                  ItemsSource="{Binding Path=CurrentDirectory.SubDirectories}"
+                  SelectedItem="{Binding Path=SelectedFileGridItem}"></DataGrid>
+        <!--<DataGrid x:Name="gridSets" DockPanel.Dock="Right" 
+                  ItemsSource="{Binding Path=Index.BackupSets}"></DataGrid>-->
     </DockPanel>
 </UserControl>
