--- a/MediaBackupManager/View/MainWindow.xaml
+++ b/MediaBackupManager/View/MainWindow.xaml
@@ -6,7 +6,8 @@
         xmlns:local="clr-namespace:MediaBackupManager.View"
         xmlns:viewmodel="clr-namespace:MediaBackupManager.ViewModel"
         mc:Ignorable="d"
-        Title="MainWindow" Height="300" Width="300" SizeToContent="WidthAndHeight" Closed="Window_Closed">
+        Title="MainWindow" Height="400" Width="1200" 
+        Closed="Window_Closed">
     
     <Window.Resources>
         <DataTemplate DataType="{x:Type viewmodel:DirectoryBrowserViewModel}">
