created messageservice, createbackupset view

--- a/MediaBackupManager/View/MainWindow.xaml
+++ b/MediaBackupManager/View/MainWindow.xaml
@@ -13,6 +13,10 @@
         <DataTemplate DataType="{x:Type viewmodel:DirectoryBrowserViewModel}">
             <local:DirectoryBrowserView />
         </DataTemplate>
+
+        <DataTemplate DataType="{x:Type viewmodel:CreateBackupSetViewModel}">
+            <local:CreateBackupSetView />
+        </DataTemplate>
     </Window.Resources>
     
     <DockPanel LastChildFill="True">
