--- a/MediaBackupManager/View/CreateBackupSetView.xaml
+++ b/MediaBackupManager/View/CreateBackupSetView.xaml
@@ -6,7 +6,24 @@
              xmlns:local="clr-namespace:MediaBackupManager.View"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid VerticalAlignment="Center" HorizontalAlignment="Center">
-        <TextBox Text="VIEW HERE" FontSize="30" />
-    </Grid>
+    <Control.Resources>
+        <Style TargetType="Button">
+            <Setter Property="Margin" Value="2" />
+        </Style>
+    </Control.Resources>
+    
+    
+    <DockPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10">
+        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal">
+            <TextBox Width="200" Height="40" IsEnabled="True" Text="{Binding BackupSetLabel}"></TextBox>
+        </StackPanel>
+        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal">
+            <TextBox Width="200" Height="40" IsReadOnly="True" Text="{Binding Path=SelectedDirectory}"></TextBox>
+            <Button x:Name="btnSelectDirectory" Content="Select Directory" Command="{Binding SelectDirectoryCommand}"></Button>
+        </StackPanel>
+        <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" Height="25" Margin="5">
+            <Button x:Name="btnConfirm" Content="OK" Command="{Binding ConfirmCommand}"></Button>
+            <Button x:Name="btnCancel" Content="Cancel" Command="{Binding CancelCommand}"></Button>
+        </StackPanel>
+    </DockPanel>
 </UserControl>
