--- a/MediaBackupManager/View/CreateBackupSetView.xaml
+++ b/MediaBackupManager/View/CreateBackupSetView.xaml
@@ -21,6 +21,12 @@
             <TextBox Width="200" Height="40" IsReadOnly="True" Text="{Binding Path=SelectedDirectory}"></TextBox>
             <Button x:Name="btnSelectDirectory" Content="Select Directory" Command="{Binding SelectDirectoryCommand}"></Button>
         </StackPanel>
+        <StackPanel DockPanel.Dock="Bottom" Orientation="Vertical" Margin="5">
+            <TextBox Text="{Binding ScanStatusText}" Width="230"  />
+            <ProgressBar Height="20" Width="230"
+                         Minimum="0" Maximum="100" 
+                         Value="{Binding ScanProgress}"></ProgressBar>
+        </StackPanel>
         <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" Height="25" Margin="5">
             <Button x:Name="btnConfirm" Content="OK" Command="{Binding ConfirmCommand}"></Button>
             <Button x:Name="btnCancel" Content="Cancel" Command="{Binding CancelCommand}"></Button>
